Updated aangan mobile master
